[gd_scene load_steps=24 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://alien/alienGreen_walk1.png" type="Texture" id=2]
[ext_resource path="res://alien/alienGreen_walk2.png" type="Texture" id=3]
[ext_resource path="res://alien/alienGreen_stand.png" type="Texture" id=4]
[ext_resource path="res://alien/alienGreen_climb1.png" type="Texture" id=5]
[ext_resource path="res://alien/alienGreen_climb2.png" type="Texture" id=6]
[ext_resource path="res://alien/alienGreen_hurt.png" type="Texture" id=7]
[ext_resource path="res://alien/alienGreen_stand_oh.png" type="Texture" id=8]
[ext_resource path="res://alien/alienGreen_jump.png" type="Texture" id=9]
[ext_resource path="res://alien/alienGreen_duck.png" type="Texture" id=10]
[ext_resource path="res://sounds/jippee1.ogg" type="AudioStream" id=11]
[ext_resource path="res://sounds/ooooooh.ogg" type="AudioStream" id=12]
[ext_resource path="res://sounds/ehhh.ogg" type="AudioStream" id=13]
[ext_resource path="res://sounds/hmmm.ogg" type="AudioStream" id=14]
[ext_resource path="res://sounds/aj1.ogg" type="AudioStream" id=15]
[ext_resource path="res://sounds/aj2.ogg" type="AudioStream" id=16]
[ext_resource path="res://sounds/aj3.ogg" type="AudioStream" id=17]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "stop",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "right",
"speed": 8.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "climb",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "talk",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "duck",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.00514139, 0.989717 )
colors = PoolColorArray( 0, 0, 0, 1, 1, 1, 1, 0, 0.0154242, 0.0154242, 0.0154242, 0.5 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.379395 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
initial_velocity = 1.0
angular_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[node name="player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "talk"

[node name="trail" type="Particles2D" parent="AnimatedSprite"]
emitting = false
amount = 6
one_shot = true
speed_scale = 1.15
explosiveness = 1.0
randomness = 0.16
process_material = SubResource( 6 )
texture = ExtResource( 10 )

[node name="Camera2D" type="Camera2D" parent="."]
rotating = true
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 11.5252, 46.7609, 18.4863, 46.053, 22.9484, 29.7427, 23.3702, 12.5903, 29.4157, 4.43583, 33.3648, -10.6288, 29.8375, -32.6809, 14.3722, -46.1779, -1.65544, -47.865, -15.1524, -44.7719, -28.9306, -31.8373, -31.964, -10.9204, -27.1029, 6.26355, -22.3227, 14.5586, -21.7603, 27.6338, -19.8586, 46.5249, -4.7566, 47.2328 )

[node name="CollisionPolygon2DDuck" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, 12.25 )
polygon = PoolVector2Array( 14.241, 22.5, 19.491, 22.5, 24.241, 22.75, 23.3702, 12.5903, 29.4157, 4.43583, 33.3648, -10.6288, 26.491, -30.75, 11.991, -43.75, -3.009, -44.75, -14.759, -42, -26.509, -30.75, -31.964, -10.9204, -27.1029, 6.26355, -22.3227, 14.5586, -18.509, 22.5, -9.259, 23.25, 5.741, 23.25 )
disabled = true

[node name="jippee" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "talk"

[node name="ooooh" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
bus = "talk"

[node name="ehhh" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
bus = "talk"

[node name="hmmm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
bus = "talk"

[node name="WaitAfterIdle" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="RecoverTimer" type="Timer" parent="."]

[node name="aj1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -5.0
bus = "talk"

[node name="aj2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -5.0
bus = "talk"

[node name="aj3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
volume_db = -5.0
bus = "talk"

[connection signal="timeout" from="WaitAfterIdle" to="." method="_on_WaitAfterIdle_timeout"]
[connection signal="timeout" from="RecoverTimer" to="." method="_on_RecoverTimer_timeout"]
